--- a/css/editor-style.css
+++ b/css/editor-style.css
@@ -1,579 +1,1 @@
-.container {
-    width: 100%;
-    padding-right: 1rem;
-    padding-left: 1rem
-}
-@media (min-width: 480px) {
-    .container {
-        max-width: 480px
-    }
-}
-@media (min-width: 600px) {
-    .container {
-        max-width: 600px;
-        padding-right: 2rem;
-        padding-left: 2rem
-    }
-}
-@media (min-width: 782px) {
-    .container {
-        max-width: 782px
-    }
-}
-@media (min-width: 960px) {
-    .container {
-        max-width: 960px;
-        padding-right: 0rem;
-        padding-left: 0rem
-    }
-}
-@media (min-width: 1280px) {
-    .container {
-        max-width: 1280px
-    }
-}
-@media (min-width: 1440px) {
-    .container {
-        max-width: 1440px
-    }
-}
-.absolute {
-    position: absolute
-}
-.relative {
-    position: relative
-}
-.inset-0 {
-    inset: 0px
-}
-.m-8 {
-    margin: 2rem
-}
-.mx-auto {
-    margin-left: auto;
-    margin-right: auto
-}
-.my-24 {
-    margin-top: 6rem;
-    margin-bottom: 6rem
-}
-.my-3 {
-    margin-top: 0.75rem;
-    margin-bottom: 0.75rem
-}
-.my-8 {
-    margin-top: 2rem;
-    margin-bottom: 2rem
-}
-.mb-1 {
-    margin-bottom: 0.25rem
-}
-.mb-10 {
-    margin-bottom: 2.5rem
-}
-.mb-12 {
-    margin-bottom: 3rem
-}
-.mb-4 {
-    margin-bottom: 1rem
-}
-.mb-8 {
-    margin-bottom: 2rem
-}
-.mr-10 {
-    margin-right: 2.5rem
-}
-.mt-12 {
-    margin-top: 3rem
-}
-.mt-16 {
-    margin-top: 4rem
-}
-.mt-4 {
-    margin-top: 1rem
-}
-.mt-5 {
-    margin-top: 1.25rem
-}
-.mt-6 {
-    margin-top: 1.5rem
-}
-.mt-8 {
-    margin-top: 2rem
-}
-.line-clamp-3 {
-    overflow: hidden;
-    display: -webkit-box;
-    -webkit-box-orient: vertical;
-    -webkit-line-clamp: 3
-}
-.inline-block {
-    display: inline-block
-}
-.flex {
-    display: flex
-}
-.grid {
-    display: grid
-}
-.hidden {
-    display: none
-}
-.aspect-\[16\/9\] {
-    aspect-ratio: 16/9
-}
-.h-1 {
-    height: 0.25rem
-}
-.h-6 {
-    height: 1.5rem
-}
-.h-auto {
-    height: auto
-}
-.min-h-screen {
-    min-height: 100vh
-}
-.w-16 {
-    width: 4rem
-}
-.w-6 {
-    width: 1.5rem
-}
-.w-64 {
-    width: 16rem
-}
-.w-auto {
-    width: auto
-}
-.w-full {
-    width: 100%
-}
-.min-w-\[100px\] {
-    min-width: 100px
-}
-.max-w-2xl {
-    max-width: 42rem
-}
-.max-w-7xl {
-    max-width: 80rem
-}
-.max-w-sm {
-    max-width: 24rem
-}
-.max-w-xl {
-    max-width: 36rem
-}
-.flex-grow {
-    flex-grow: 1
-}
-.transform {
-    transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y))
-}
-.cursor-pointer {
-    cursor: pointer
-}
-.list-decimal {
-    list-style-type: decimal
-}
-.list-disc {
-    list-style-type: disc
-}
-.grid-cols-1 {
-    grid-template-columns: repeat(1, minmax(0, 1fr))
-}
-.flex-col {
-    flex-direction: column
-}
-.flex-wrap {
-    flex-wrap: wrap
-}
-.items-start {
-    align-items: flex-start
-}
-.items-center {
-    align-items: center
-}
-.justify-start {
-    justify-content: flex-start
-}
-.justify-center {
-    justify-content: center
-}
-.justify-between {
-    justify-content: space-between
-}
-.gap-2 {
-    gap: 0.5rem
-}
-.gap-4 {
-    gap: 1rem
-}
-.gap-x-4 {
-    -moz-column-gap: 1rem;
-         column-gap: 1rem
-}
-.gap-x-8 {
-    -moz-column-gap: 2rem;
-         column-gap: 2rem
-}
-.gap-y-20 {
-    row-gap: 5rem
-}
-.rounded {
-    border-radius: 0.25rem
-}
-.rounded-2xl {
-    border-radius: 1rem
-}
-.rounded-lg {
-    border-radius: 0.5rem
-}
-.border-b {
-    border-bottom-width: 1px
-}
-.border-primary {
-    --tw-border-opacity: 1;
-    border-color: rgb(14 165 233 / var(--tw-border-opacity))
-}
-.bg-gray-100 {
-    --tw-bg-opacity: 1;
-    background-color: rgb(243 244 246 / var(--tw-bg-opacity))
-}
-.bg-gray-200 {
-    --tw-bg-opacity: 1;
-    background-color: rgb(229 231 235 / var(--tw-bg-opacity))
-}
-.bg-gray-800 {
-    --tw-bg-opacity: 1;
-    background-color: rgb(31 41 55 / var(--tw-bg-opacity))
-}
-.bg-gray-900 {
-    --tw-bg-opacity: 1;
-    background-color: rgb(17 24 39 / var(--tw-bg-opacity))
-}
-.bg-primary {
-    --tw-bg-opacity: 1;
-    background-color: rgb(14 165 233 / var(--tw-bg-opacity))
-}
-.object-cover {
-    -o-object-fit: cover;
-       object-fit: cover
-}
-.p-4 {
-    padding: 1rem
-}
-.p-5 {
-    padding: 1.25rem
-}
-.px-3 {
-    padding-left: 0.75rem;
-    padding-right: 0.75rem
-}
-.px-4 {
-    padding-left: 1rem;
-    padding-right: 1rem
-}
-.px-6 {
-    padding-left: 1.5rem;
-    padding-right: 1.5rem
-}
-.py-12 {
-    padding-top: 3rem;
-    padding-bottom: 3rem
-}
-.py-2 {
-    padding-top: 0.5rem;
-    padding-bottom: 0.5rem
-}
-.py-6 {
-    padding-top: 1.5rem;
-    padding-bottom: 1.5rem
-}
-.text-center {
-    text-align: center
-}
-.text-2xl {
-    font-size: 1.5rem;
-    line-height: 2rem
-}
-.text-3xl {
-    font-size: 1.875rem;
-    line-height: 2.25rem
-}
-.text-5xl {
-    font-size: 3rem;
-    line-height: 1
-}
-.text-lg {
-    font-size: 1.125rem;
-    line-height: 1.75rem
-}
-.text-sm {
-    font-size: 0.875rem;
-    line-height: 1.25rem
-}
-.text-xs {
-    font-size: 0.75rem;
-    line-height: 1rem
-}
-.font-bold {
-    font-weight: 700
-}
-.font-extrabold {
-    font-weight: 800
-}
-.font-light {
-    font-weight: 300
-}
-.font-semibold {
-    font-weight: 600
-}
-.uppercase {
-    text-transform: uppercase
-}
-.leading-6 {
-    line-height: 1.5rem
-}
-.leading-tight {
-    line-height: 1.25
-}
-.text-blue-500 {
-    --tw-text-opacity: 1;
-    color: rgb(59 130 246 / var(--tw-text-opacity))
-}
-.text-gray-100 {
-    --tw-text-opacity: 1;
-    color: rgb(243 244 246 / var(--tw-text-opacity))
-}
-.text-gray-200 {
-    --tw-text-opacity: 1;
-    color: rgb(229 231 235 / var(--tw-text-opacity))
-}
-.text-gray-300 {
-    --tw-text-opacity: 1;
-    color: rgb(209 213 219 / var(--tw-text-opacity))
-}
-.text-gray-600 {
-    --tw-text-opacity: 1;
-    color: rgb(75 85 99 / var(--tw-text-opacity))
-}
-.text-gray-700 {
-    --tw-text-opacity: 1;
-    color: rgb(55 65 81 / var(--tw-text-opacity))
-}
-.text-gray-800 {
-    --tw-text-opacity: 1;
-    color: rgb(31 41 55 / var(--tw-text-opacity))
-}
-.text-white {
-    --tw-text-opacity: 1;
-    color: rgb(255 255 255 / var(--tw-text-opacity))
-}
-.underline {
-    text-decoration-line: underline
-}
-.antialiased {
-    -webkit-font-smoothing: antialiased;
-    -moz-osx-font-smoothing: grayscale
-}
-.ring-1 {
-    --tw-ring-offset-shadow: var(--tw-ring-inset) 0 0 0 var(--tw-ring-offset-width) var(--tw-ring-offset-color);
-    --tw-ring-shadow: var(--tw-ring-inset) 0 0 0 calc(1px + var(--tw-ring-offset-width)) var(--tw-ring-color);
-    box-shadow: var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow, 0 0 #0000)
-}
-.ring-inset {
-    --tw-ring-inset: inset
-}
-.ring-gray-900\/10 {
-    --tw-ring-color: rgb(17 24 39 / 0.1)
-}
-.alignfull {
-    margin: 2rem calc(50% - 50vw) !important;
-    max-width: 100vw !important;
-    width: 100vw
-}
-.alignwide {
-    margin: 2rem 0;
-    max-width: 1280px !important
-}
-.alignnone {
-    margin-left: 0px;
-    margin-right: 0px;
-    height: auto;
-    max-width: 100%
-}
-.aligncenter {
-    margin: 0.5rem auto;
-    display: block
-}
-@media (min-width: 600px) {
-    .alignleft:not(.wp-block-button) {
-        margin-right: 0.5rem;
-        float: left
-    }
-    .alignright:not(.wp-block-button) {
-        margin-left: 0.5rem;
-        float: right
-    }
-    .wp-block-button.alignleft a {
-        float: left;
-        margin-right: 1rem
-    }
-    .wp-block-button.alignright a {
-        float: right;
-        margin-left: 1rem
-    }
-}
-.wp-caption {
-    display: inline-block
-}
-.wp-caption img {
-    margin-bottom: 0.5rem;
-    line-height: 1
-}
-.wp-caption-text {
-    font-size: 0.875rem;
-    color: #4b5563
-}
-body {
-    font-family: ui-sans-serif, system-ui, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji"
-}
-.wp-block {
-    max-width: 1280px
-}
-.wp-block[data-align=wide] {
-    max-width: 1280px
-}
-.wp-block[data-align=full] {
-    max-width: 100%
-}
-.group:hover .group-hover\:text-gray-300 {
-    --tw-text-opacity: 1;
-    color: rgb(209 213 219 / var(--tw-text-opacity))
-}
-@media (min-width: 600px) {
-    .sm\:aspect-\[2\/1\] {
-        aspect-ratio: 2/1
-    }
-    .sm\:w-\[35rem\] {
-        width: 35rem
-    }
-    .sm\:w-\[70\%\] {
-        width: 70%
-    }
-    .sm\:px-8 {
-        padding-left: 2rem;
-        padding-right: 2rem
-    }
-    .sm\:py-12 {
-        padding-top: 3rem;
-        padding-bottom: 3rem
-    }
-}
-@media (min-width: 782px) {
-    .md\:my-6 {
-        margin-top: 1.5rem;
-        margin-bottom: 1.5rem
-    }
-    .md\:flex {
-        display: flex
-    }
-    .md\:h-auto {
-        height: auto
-    }
-    .md\:w-1\/2 {
-        width: 50%
-    }
-    .md\:w-\[30rem\] {
-        width: 30rem
-    }
-    .md\:w-\[60\%\] {
-        width: 60%
-    }
-    .md\:w-auto {
-        width: auto
-    }
-    .md\:flex-row {
-        flex-direction: row
-    }
-    .md\:px-24 {
-        padding-left: 6rem;
-        padding-right: 6rem
-    }
-    .md\:text-3xl {
-        font-size: 1.875rem;
-        line-height: 2.25rem
-    }
-}
-@media (min-width: 960px) {
-    .lg\:-mx-4 {
-        margin-left: -1rem;
-        margin-right: -1rem
-    }
-    .lg\:mx-0 {
-        margin-left: 0px;
-        margin-right: 0px
-    }
-    .lg\:mx-4 {
-        margin-left: 1rem;
-        margin-right: 1rem
-    }
-    .lg\:mt-0 {
-        margin-top: 0px
-    }
-    .lg\:block {
-        display: block
-    }
-    .lg\:flex {
-        display: flex
-    }
-    .lg\:hidden {
-        display: none
-    }
-    .lg\:aspect-\[3\/2\] {
-        aspect-ratio: 3/2
-    }
-    .lg\:w-\[25rem\] {
-        width: 25rem
-    }
-    .lg\:w-\[50\%\] {
-        width: 50%
-    }
-    .lg\:max-w-none {
-        max-width: none
-    }
-    .lg\:grid-cols-3 {
-        grid-template-columns: repeat(3, minmax(0, 1fr))
-    }
-    .lg\:items-center {
-        align-items: center
-    }
-    .lg\:justify-between {
-        justify-content: space-between
-    }
-    .lg\:bg-transparent {
-        background-color: transparent
-    }
-    .lg\:p-0 {
-        padding: 0px
-    }
-    .lg\:px-24 {
-        padding-left: 6rem;
-        padding-right: 6rem
-    }
-    .lg\:px-8 {
-        padding-left: 2rem;
-        padding-right: 2rem
-    }
-    .lg\:text-5xl {
-        font-size: 3rem;
-        line-height: 1
-    }
-}
-@media (min-width: 1280px) {
-    .xl\:px-24 {
-        padding-left: 6rem;
-        padding-right: 6rem
-    }
-}
+.container{padding-left:1rem;padding-right:1rem;width:100%}@media (min-width:480px){.container{max-width:480px}}@media (min-width:600px){.container{max-width:600px;padding-left:2rem;padding-right:2rem}}@media (min-width:782px){.container{max-width:782px}}@media (min-width:960px){.container{max-width:960px;padding-left:0;padding-right:0}}@media (min-width:1280px){.container{max-width:1280px}}@media (min-width:1440px){.container{max-width:1440px}}.absolute{position:absolute}.relative{position:relative}.inset-0{inset:0}.m-8{margin:2rem}.mx-auto{margin-left:auto;margin-right:auto}.my-24{margin-bottom:6rem;margin-top:6rem}.my-3{margin-bottom:.75rem;margin-top:.75rem}.my-8{margin-bottom:2rem;margin-top:2rem}.mb-1{margin-bottom:.25rem}.mb-10{margin-bottom:2.5rem}.mb-12{margin-bottom:3rem}.mb-4{margin-bottom:1rem}.mb-8{margin-bottom:2rem}.mr-10{margin-right:2.5rem}.mt-12{margin-top:3rem}.mt-16{margin-top:4rem}.mt-4{margin-top:1rem}.mt-5{margin-top:1.25rem}.mt-6{margin-top:1.5rem}.mt-8{margin-top:2rem}.line-clamp-3{-webkit-box-orient:vertical;-webkit-line-clamp:3;display:-webkit-box;overflow:hidden}.inline-block{display:inline-block}.flex{display:flex}.grid{display:grid}.hidden{display:none}.aspect-\[16\/9\]{aspect-ratio:16/9}.h-1{height:.25rem}.h-6{height:1.5rem}.h-auto{height:auto}.min-h-screen{min-height:100vh}.w-16{width:4rem}.w-6{width:1.5rem}.w-64{width:16rem}.w-auto{width:auto}.w-full{width:100%}.min-w-\[100px\]{min-width:100px}.max-w-2xl{max-width:42rem}.max-w-7xl{max-width:80rem}.max-w-sm{max-width:24rem}.max-w-xl{max-width:36rem}.flex-grow{flex-grow:1}.transform{transform:translate(var(--tw-translate-x),var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y))}.cursor-pointer{cursor:pointer}.list-decimal{list-style-type:decimal}.list-disc{list-style-type:disc}.grid-cols-1{grid-template-columns:repeat(1,minmax(0,1fr))}.flex-col{flex-direction:column}.flex-wrap{flex-wrap:wrap}.items-start{align-items:flex-start}.items-center{align-items:center}.justify-start{justify-content:flex-start}.justify-center{justify-content:center}.justify-between{justify-content:space-between}.gap-2{gap:.5rem}.gap-4{gap:1rem}.gap-x-4{-moz-column-gap:1rem;column-gap:1rem}.gap-x-8{-moz-column-gap:2rem;column-gap:2rem}.gap-y-20{row-gap:5rem}.rounded{border-radius:.25rem}.rounded-2xl{border-radius:1rem}.rounded-lg{border-radius:.5rem}.border-b{border-bottom-width:1px}.border-primary{--tw-border-opacity:1;border-color:rgb(14 165 233/var(--tw-border-opacity))}.bg-gray-100{--tw-bg-opacity:1;background-color:rgb(243 244 246/var(--tw-bg-opacity))}.bg-gray-200{--tw-bg-opacity:1;background-color:rgb(229 231 235/var(--tw-bg-opacity))}.bg-gray-800{--tw-bg-opacity:1;background-color:rgb(31 41 55/var(--tw-bg-opacity))}.bg-gray-900{--tw-bg-opacity:1;background-color:rgb(17 24 39/var(--tw-bg-opacity))}.bg-primary{--tw-bg-opacity:1;background-color:rgb(14 165 233/var(--tw-bg-opacity))}.object-cover{-o-object-fit:cover;object-fit:cover}.p-4{padding:1rem}.p-5{padding:1.25rem}.px-3{padding-left:.75rem;padding-right:.75rem}.px-4{padding-left:1rem;padding-right:1rem}.px-6{padding-left:1.5rem;padding-right:1.5rem}.py-12{padding-bottom:3rem;padding-top:3rem}.py-2{padding-bottom:.5rem;padding-top:.5rem}.py-6{padding-bottom:1.5rem;padding-top:1.5rem}.text-center{text-align:center}.text-2xl{font-size:1.5rem;line-height:2rem}.text-3xl{font-size:1.875rem;line-height:2.25rem}.text-5xl{font-size:3rem;line-height:1}.text-lg{font-size:1.125rem;line-height:1.75rem}.text-sm{font-size:.875rem;line-height:1.25rem}.text-xs{font-size:.75rem;line-height:1rem}.font-bold{font-weight:700}.font-extrabold{font-weight:800}.font-light{font-weight:300}.font-semibold{font-weight:600}.uppercase{text-transform:uppercase}.leading-6{line-height:1.5rem}.leading-tight{line-height:1.25}.text-blue-500{--tw-text-opacity:1;color:rgb(59 130 246/var(--tw-text-opacity))}.text-gray-100{--tw-text-opacity:1;color:rgb(243 244 246/var(--tw-text-opacity))}.text-gray-200{--tw-text-opacity:1;color:rgb(229 231 235/var(--tw-text-opacity))}.text-gray-300{--tw-text-opacity:1;color:rgb(209 213 219/var(--tw-text-opacity))}.text-gray-600{--tw-text-opacity:1;color:rgb(75 85 99/var(--tw-text-opacity))}.text-gray-700{--tw-text-opacity:1;color:rgb(55 65 81/var(--tw-text-opacity))}.text-gray-800{--tw-text-opacity:1;color:rgb(31 41 55/var(--tw-text-opacity))}.text-white{--tw-text-opacity:1;color:rgb(255 255 255/var(--tw-text-opacity))}.underline{text-decoration-line:underline}.antialiased{-webkit-font-smoothing:antialiased;-moz-osx-font-smoothing:grayscale}.ring-1{--tw-ring-offset-shadow:var(--tw-ring-inset) 0 0 0 var(--tw-ring-offset-width) var(--tw-ring-offset-color);--tw-ring-shadow:var(--tw-ring-inset) 0 0 0 calc(1px + var(--tw-ring-offset-width)) var(--tw-ring-color);box-shadow:var(--tw-ring-offset-shadow),var(--tw-ring-shadow),var(--tw-shadow,0 0 #0000)}.ring-inset{--tw-ring-inset:inset}.ring-gray-900\/10{--tw-ring-color:rgba(17,24,39,.1)}.alignfull{margin:2rem calc(50% - 50vw)!important;max-width:100vw!important;width:100vw}.alignwide{margin:2rem 0;max-width:1280px!important}.alignnone{height:auto;margin-left:0;margin-right:0;max-width:100%}.aligncenter{display:block;margin:.5rem auto}@media (min-width:600px){.alignleft:not(.wp-block-button){float:left;margin-right:.5rem}.alignright:not(.wp-block-button){float:right;margin-left:.5rem}.wp-block-button.alignleft a{float:left;margin-right:1rem}.wp-block-button.alignright a{float:right;margin-left:1rem}}.wp-caption{display:inline-block}.wp-caption img{line-height:1;margin-bottom:.5rem}.wp-caption-text{color:#4b5563;font-size:.875rem}body{font-family:ui-sans-serif,system-ui,sans-serif,Apple Color Emoji,Segoe UI Emoji,Segoe UI Symbol,Noto Color Emoji}.wp-block,.wp-block[data-align=wide]{max-width:1280px}.wp-block[data-align=full]{max-width:100%}.group:hover .group-hover\:text-gray-300{--tw-text-opacity:1;color:rgb(209 213 219/var(--tw-text-opacity))}@media (min-width:600px){.sm\:aspect-\[2\/1\]{aspect-ratio:2/1}.sm\:w-\[35rem\]{width:35rem}.sm\:w-\[70\%\]{width:70%}.sm\:px-8{padding-left:2rem;padding-right:2rem}.sm\:py-12{padding-bottom:3rem;padding-top:3rem}}@media (min-width:782px){.md\:my-6{margin-bottom:1.5rem;margin-top:1.5rem}.md\:flex{display:flex}.md\:h-auto{height:auto}.md\:w-1\/2{width:50%}.md\:w-\[30rem\]{width:30rem}.md\:w-\[60\%\]{width:60%}.md\:w-auto{width:auto}.md\:flex-row{flex-direction:row}.md\:px-24{padding-left:6rem;padding-right:6rem}.md\:text-3xl{font-size:1.875rem;line-height:2.25rem}}@media (min-width:960px){.lg\:-mx-4{margin-left:-1rem;margin-right:-1rem}.lg\:mx-0{margin-left:0;margin-right:0}.lg\:mx-4{margin-left:1rem;margin-right:1rem}.lg\:mt-0{margin-top:0}.lg\:block{display:block}.lg\:flex{display:flex}.lg\:hidden{display:none}.lg\:aspect-\[3\/2\]{aspect-ratio:3/2}.lg\:w-\[25rem\]{width:25rem}.lg\:w-\[50\%\]{width:50%}.lg\:max-w-none{max-width:none}.lg\:grid-cols-3{grid-template-columns:repeat(3,minmax(0,1fr))}.lg\:items-center{align-items:center}.lg\:justify-between{justify-content:space-between}.lg\:bg-transparent{background-color:transparent}.lg\:p-0{padding:0}.lg\:px-24{padding-left:6rem;padding-right:6rem}.lg\:px-8{padding-left:2rem;padding-right:2rem}.lg\:text-5xl{font-size:3rem;line-height:1}}@media (min-width:1280px){.xl\:px-24{padding-left:6rem;padding-right:6rem}}
